--- a/app/package.json
+++ b/app/package.json
@@ -6,14 +6,15 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "debug": "~0.7.4",
-    "express": "~3.4.8",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
     "body-parser": "~1.0.0",
-    "mongoose": "~3.8.8",
+    "commander": "^2.9.0",
+    "cookie-parser": "~1.0.1",
+    "debug": "~0.7.4",
     "ejs": "~0.8.5",
-    "nodemailer": "^0.7.0"
+    "express": "~3.4.8",
+    "mongoose": "~3.8.8",
+    "morgan": "~1.0.0",
+    "nodemailer": "^0.7.0",
+    "static-favicon": "~1.0.0"
   }
 }
